--- a/SRC/controller/paginas/Post.html
+++ b/SRC/controller/paginas/Post.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="post.css">
     <title>Lugares RecAlt</title>
 </head>
 <body>
   <h1>Adicionar Novos Lugares</h1>
   <form class="container" method="post" action="/lugares/enviar">
     <div class="form-group">
-      <p>ID<input class="form-control" name="id"></p>
+      <td><p>Id</p><input type="text" name="id"size="40"></td>
     </div>
     <div class="form-group">
-      <p>Titulo</p><input class="form-control" name="titulo">
+      <td><p>Titulo</p><input type="text" name="titulo"size="40"></td>
     </div>
-    <div class="form-group">
-      <p>Texto</p><input class="form-control" name="texto">
+    <div class="form-group1">
+      <td><p>Texto</p><input type="text" name="texto"size="40" class="txt"></td>
     </div>
     <button>Adicionar</button>
   </form>
