--- a/SRC/controller/paginas/Put.html
+++ b/SRC/controller/paginas/Put.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="post">
     <title>Lugares RecAlt</title>
 </head>
 <body>
@@ -56,7 +55,7 @@ input{
 
     
   </style>
-  <h1>Adicionar Novos Lugares</h1>
+  <h1>Atualizar Lugares</h1>
   <form class="container" method="post" action="/lugares/enviar">
     <div class="form-group">
       <td><p>Id</p><input type="text" name="id"size="40"></td>
